--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Ali Berkant Eker | Portfolyo</title>
 </head>
 <body>
-    <h1>Ali Berkant Eker</h1>
-    <p>Portfolyo sitem yapım aşamasındadır. NOCTUS-06 ve diğer projelerim yakında burada olacak!</p>
+    <h2>Ali Berkant Eker</h2>
+    <p>Portfolyo sistem yapım aşamasındadır. NOCTUS-06 ve diğer projelerim yakında burada olacak!</p>
 </body>
 </html>
