--- a/index.html
+++ b/index.html
@@ -1,34 +1,62 @@
-# Merhaba, ben Ali Berkant Eker 👋
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ali Berkant Eker | Portfolyo</title>
+    <style>
+        body { font-family: sans-serif; line-height: 1.6; margin: 20px; color: #333; }
+        .container { max-width: 800px; margin: auto; padding: 20px; }
+        h1, h2, h3 { color: #005f73; }
+        .project-link { display: block; margin-bottom: 10px; font-size: 1.1em; }
+    </style>
+</head>
+<body>
 
-Erciyes Üniversitesi'nde Astronomi ve Uzay Bilimleri alanında yüksek lisans öğrencisiyim. Gömülü sistemler, telemetri ve uydu teknolojileri üzerine çalışmalar yürütüyor, bu alanlarda çeşitli projeler geliştiriyorum.
+<div class="container">
+    <h1>Ali Berkant Eker</h1>
+    <p>Erciyes Üniversitesi'nde Astronomi ve Uzay Bilimleri alanında yüksek lisans öğrencisiyim. Gömülü sistemler, telemetri ve uydu teknolojileri üzerine çalışmalar yürütüyor, bu alanlarda çeşitli projeler geliştiriyorum.</p>
 
-KAYSat Model Uydu Takımı'nda 3 yılı aşkın süredir takım kaptanı olarak görev alıyorum. Bu süreçte:
+    <p>KAYSat Model Uydu Takımı'nda 3 yılı aşkın süredir takım kaptanı olarak görev alıyorum. Bu süreçte:</p>
 
-* Sistem Mühendisliği, proje planlama ve teknik süreçlerin yönetimini üstlendim.
-* Ekip koordinasyonu ve görev dağılımını yürüttüm.
-* İniş Sistemleri, uydu modelleme, entegrasyon ve tasarım süreçlerini üstlendim.
+    <ul>
+        <li>Sistem Mühendisliği, proje planlama ve teknik süreçlerin yönetimini üstlendim.</li>
+        <li>Ekip koordinasyonu ve görev dağılımını yürüttüm.</li>
+        <li>İniş Sistemleri, uydu modelleme, entegrasyon ve tasarım süreçlerini üstlendim.</li>
+    </ul>
 
-Çalışmalarımda özellikle uydu teknolojileri, gömülü sistem tasarımı ve telemetri altyapıları konularına odaklanıyorum.
+    <p>Çalışmalarımda özellikle uydu teknolojileri, gömülü sistem tasarımı ve telemetri altyapıları konularına odaklanıyorum.</p>
 
----
+    <hr>
 
-## Projelerim
+    <h2>Projelerim</h2>
 
-* **NOCTUS-06:** Tek başıma geliştirdiğim, "Yer tabanlı fonksiyonel küp uydu ve yer istasyonu platformu" projesidir. Detaylar için [NOCTUS-06 deposunu ziyaret edin](https://github.com/aliberkanteker/NOCTUS-06).
-* **KAYSAT Model Uydu:** TEKNOFEST 2023 Model Uydu Yarışması'nda takım lideri ve elektrik alt sistem tasarımcısı olarak görev aldığım projedir.
-* **TICOSAT:** TEKNOFEST 2025 Model Uydu Yarışması'nda üzerinde çalıştığımız projemiz. İniş kontrol, tasarım & modelleme ve haberleşme alt sistemlerinin tasarımını üstleniyorum.
- 
----
+    <ul>
+        <li><strong>NOCTUS-06:</strong> Tek başıma geliştirdiğim, "Yer tabanlı fonksiyonel küp uydu ve yer istasyonu platformu" projesidir. Detaylar için <a href="https://github.com/aliberkanteker/NOCTUS-06">NOCTUS-06 deposunu ziyaret edin</a>.</li>
+        <li><strong>KAYSAT Model Uydu:</strong> TEKNOFEST 2023 Model Uydu Yarışması'nda takım lideri ve elektrik alt sistem tasarımcısı olarak görev aldığım projedir.</li>
+        <li><strong>TICOSAT:</strong> TEKNOFEST 2025 Model Uydu Yarışması'nda üzerinde çalıştığımız projemiz. İniş kontrol, tasarım & modelleme ve haberleşme alt sistemlerinin tasarımını üstleniyorum.</li>
+    </ul>
 
-## Becerilerim
+    <hr>
 
-* **Yazılım ve Kodlama:** Python, C++, Gömülü Sistemler, Flask, Electron.
-* **Donanım ve Tasarım:** SolidWorks, Tinkercad, Elektrik-Elektronik, Robotik Kodlama.
-* **Uzmanlık:** Sistem Mühendisliği, sistem entegrasyonu, telemetri altyapıları, uydu mekanik & elektronik tasarım.
-  
----
+    <h2>Becerilerim</h2>
 
-## Bana Ulaşın
+    <ul>
+        <li><strong>Yazılım ve Kodlama:</strong> Python, C++, Gömülü Sistemler, Flask, Electron.</li>
+        <li><strong>Donanım ve Tasarım:</strong> SolidWorks, Tinkercad, Elektrik-Elektronik, Robotik Kodlama.</li>
+        <li><strong>Uzmanlık:</strong> Sistem Mühendisliği, sistem entegrasyonu, telemetri altyapıları, uydu mekanik & elektronik tasarım.</li>
+    </ul>
 
-* **LinkedIn:** [linkedin.com/in/ali-berkant-eker](https://www.linkedin.com/in/ali-berkant-eker).
-* **Email:** aliberkanteker06@gmail.com.
+    <hr>
+
+    <h2>Bana Ulaşın</h2>
+
+    <ul>
+        <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ali-berkant-eker">linkedin.com/in/ali-berkant-eker</a></li>
+        <li><strong>Email:</strong> <a href="mailto:aliberkanteker06@gmail.com">aliberkanteker06@gmail.com</a></li>
+    </ul>
+
+</div>
+
+</body>
+</html>
