--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ali Berkant Eker | Portfolyo</title>
+    <title>Ali Berkant Eker | Portfolio</title>
     <style>
         body { font-family: sans-serif; line-height: 1.6; margin: 20px; color: #333; }
         .container { max-width: 800px; margin: auto; padding: 20px; }
@@ -15,41 +15,41 @@
 
 <div class="container">
     <h1>Ali Berkant Eker</h1>
-    <p>Erciyes Üniversitesi'nde Astronomi ve Uzay Bilimleri alanında yüksek lisans öğrencisiyim. Gömülü sistemler, telemetri ve uydu teknolojileri üzerine çalışmalar yürütüyor, bu alanlarda çeşitli projeler geliştiriyorum.</p>
+    <p>I am a master's student in Astronomy and Space Sciences at Erciyes University. I conduct research on embedded systems, telemetry, and satellite technologies, and I develop various projects in these fields.</p>
 
-    <p>KAYSat Model Uydu Takımı'nda 3 yılı aşkın süredir takım kaptanı olarak görev alıyorum. Bu süreçte:</p>
+    <p>I have been serving as the team captain of the KAYSat Model Satellite Team for over 3 years. During this period:</p>
 
     <ul>
-        <li>Sistem Mühendisliği, proje planlama ve teknik süreçlerin yönetimini üstlendim.</li>
-        <li>Ekip koordinasyonu ve görev dağılımını yürüttüm.</li>
-        <li>İniş Sistemleri, uydu modelleme, entegrasyon ve tasarım süreçlerini üstlendim.</li>
+        <li>I took on System Engineering, project planning, and the management of technical processes.</li>
+        <li>I handled team coordination and task distribution.</li>
+        <li>I was in charge of Landing Systems, satellite modeling, integration, and design processes.</li>
     </ul>
 
-    <p>Çalışmalarımda özellikle uydu teknolojileri, gömülü sistem tasarımı ve telemetri altyapıları konularına odaklanıyorum.</p>
+    <p>In my work, I specifically focus on satellite technologies, embedded system design, and telemetry infrastructures.</p>
 
     <hr>
 
-    <h2>Projelerim</h2>
+    <h2>My Projects</h2>
 
     <ul>
-        <li><strong>NOCTUS-06:</strong> Tek başıma geliştirdiğim, "Yer tabanlı fonksiyonel küp uydu ve yer istasyonu platformu" projesidir. Detaylar için <a href="https://github.com/aliberkanteker/NOCTUS-06">NOCTUS-06 deposunu ziyaret edin</a>.</li>
-        <li><strong>KAYSAT Model Uydu:</strong> TEKNOFEST 2023 Model Uydu Yarışması'nda takım lideri ve elektrik alt sistem tasarımcısı olarak görev aldığım projedir.</li>
-        <li><strong>TICOSAT:</strong> TEKNOFEST 2025 Model Uydu Yarışması'nda üzerinde çalıştığımız projemiz. İniş kontrol, tasarım & modelleme ve haberleşme alt sistemlerinin tasarımını üstleniyorum.</li>
-    </ul>
-
-    <hr>
-
-    <h2>Becerilerim</h2>
-
-    <ul>
-        <li><strong>Yazılım ve Kodlama:</strong> Python, C++, Gömülü Sistemler, Flask, Electron.</li>
-        <li><strong>Donanım ve Tasarım:</strong> SolidWorks, Tinkercad, Elektrik-Elektronik, Robotik Kodlama.</li>
-        <li><strong>Uzmanlık:</strong> Sistem Mühendisliği, sistem entegrasyonu, telemetri altyapıları, uydu mekanik & elektronik tasarım.</li>
+        <li><strong>NOCTUS-06:</strong> This is a "Ground-based functional CubeSat and ground station platform" project that I developed on my own. For details, <a href="https://github.com/aliberkanteker/NOCTUS-06">visit the NOCTUS-06 repository</a>.</li>
+        <li><strong>KAYSAT Model Satellite:</strong> This is a project where I served as the team leader and electrical subsystem designer in the TEKNOFEST 2023 Model Satellite Competition.</li>
+        <li><strong>TICOSAT:</strong> This is our ongoing project for the TEKNOFEST 2025 Model Satellite Competition. I am responsible for the design of the landing control, design & modeling, and communication subsystems.</li>
     </ul>
 
     <hr>
 
-    <h2>Bana Ulaşın</h2>
+    <h2>My Skills</h2>
+
+    <ul>
+        <li><strong>Software and Coding:</strong> Python, C++, Embedded Systems, Flask, Electron.</li>
+        <li><strong>Hardware and Design:</strong> SolidWorks, Tinkercad, Electrical-Electronics, Robotic Coding.</li>
+        <li><strong>Expertise:</strong> Systems Engineering, System Integration, Telemetry Infrastructures, Satellite Mechanical & Electronic Design.</li>
+    </ul>
+
+    <hr>
+
+    <h2>Contact Me</h2>
 
     <ul>
         <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ali-berkant-eker">linkedin.com/in/ali-berkant-eker</a></li>
