--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
         body { font-family: sans-serif; line-height: 1.6; margin: 20px; color: #333; }
         .container { max-width: 800px; margin: auto; padding: 20px; }
         h1, h2, h3 { color: #005f73; }
-        .project-link { display: block; margin-bottom: 10px; font-size: 1.1em; }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <h1>Ali Berkant Eker</h1>
+    <h1>Hello, I'm Ali Berkant Eker 👋</h1>
+
     <p>I am a master's student in Astronomy and Space Sciences at Erciyes University. I conduct research on embedded systems, telemetry, and satellite technologies, and I develop various projects in these fields.</p>
 
     <p>I have been serving as the team captain of the KAYSat Model Satellite Team for over 3 years. During this period:</p>
 
     <ul>
-        <li>I took on System Engineering, project planning, and the management of technical processes.</li>
+        <li>I took on System Engineering.</li>
+        <li>I managed project planning and technical processes.</li>
         <li>I handled team coordination and task distribution.</li>
-        <li>I was in charge of Landing Systems, satellite modeling, integration, and design processes.</li>
+        <li>I was in charge of Landing Systems, Satellite modeling, Integration, and design processes.</li>
     </ul>
 
     <p>In my work, I specifically focus on satellite technologies, embedded system design, and telemetry infrastructures.</p>
@@ -32,8 +33,8 @@
     <h2>My Projects</h2>
 
     <ul>
-        <li><strong>NOCTUS-06:</strong> This is a "Ground-based functional CubeSat and ground station platform" project that I developed on my own. For details, <a href="https://github.com/aliberkanteker/NOCTUS-06">visit the NOCTUS-06 repository</a>.</li>
-        <li><strong>KAYSAT Model Satellite:</strong> This is a project where I served as the team leader and electrical subsystem designer in the TEKNOFEST 2023 Model Satellite Competition.</li>
+        <li><strong>NOCTUS-06:</strong> This is a "Ground-based functional CubeSat and ground station platform" project that I developed on my own.</li>
+        <li><strong>KAYSAT Model Satellite:</strong> This is a project where I served as the team leader and electrical subsystem designer in the TEKNOFEST 2023 Model Satellite Competition. For details, <a href="https://github.com/aliberkanteker/Atmospheric_sensor_codes">visit the Atmospheric_sensor_codes repository.</a></li>
         <li><strong>TICOSAT:</strong> This is our ongoing project for the TEKNOFEST 2025 Model Satellite Competition. I am responsible for the design of the landing control, design & modeling, and communication subsystems.</li>
     </ul>
 
@@ -42,9 +43,9 @@
     <h2>My Skills</h2>
 
     <ul>
-        <li><strong>Software and Coding:</strong> Python, C++, Embedded Systems, Flask, Electron.</li>
-        <li><strong>Hardware and Design:</strong> SolidWorks, Tinkercad, Electrical-Electronics, Robotic Coding.</li>
-        <li><strong>Expertise:</strong> Systems Engineering, System Integration, Telemetry Infrastructures, Satellite Mechanical & Electronic Design.</li>
+        <li><strong>Software and Coding:</strong> Python, C++, Embedded Systems, Flask, Electron</li>
+        <li><strong>Hardware and Design:</strong> SolidWorks, Tinkercad, Electrical-Electronics, Robotic Coding</li>
+        <li><strong>Expertise:</strong> Systems Engineering, System Integration, Telemetry Infrastructures, Satellite Mechanical & Electronic Design</li>
     </ul>
 
     <hr>
