--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="container">
     <h1>Hello, I'm Ali Berkant Eker 👋</h1>
 
-    <img src="2.Ali Berkant Eker.jpg" alt="Ali Berkant Eker portre" style="max-width: 150px; border-radius: 50%;">
+    <img src="2.Ali Berkant Eker.jpg" alt="Ali Berkant Eker portre" style="max-width: 150px; border-radius: 50%; margin-left: 20px; margin-bottom: 20px;">
 
     <p>I am a master's student in Astronomy and Space Sciences at Erciyes University. I conduct research on embedded systems, telemetry, and satellite technologies, and I develop various projects in these fields.</p>
 
