--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ali Berkant Eker | Portfolio</title>
-    <style>
-        body { font-family: sans-serif; line-height: 1.6; margin: 20px; color: #333; }
-        .container { max-width: 800px; margin: auto; padding: 20px; }
-        h1, h2, h3 { color: #005f73; }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
