--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h2>My Projects</h2>
 
     <ul>
-        <li><strong>NOCTUS-06:</strong> This is a "Ground-based functional CubeSat and ground station platform" project that I developed on my own.</li>
+        <li><strong>NOCTUS-06:</strong> This is a "Ground-based functional CubeSat and ground station platform" project that I developed on my own. You can <a href="https://aliberkanteker.github.io/NOCTUS-06">visit the project page here.</a></li>
         <li><strong>KAYSAT Model Satellite:</strong> This is a project where I served as the team leader and electrical subsystem designer in the TEKNOFEST 2023 Model Satellite Competition. For details, <a href="https://github.com/aliberkanteker/Atmospheric_sensor_codes">visit the Atmospheric_sensor_codes repository.</a></li>
         <li><strong>TICOSAT:</strong> This is our ongoing project for the TEKNOFEST 2025 Model Satellite Competition. I am responsible for the design of the landing control, design & modeling, and communication subsystems.</li>
     </ul>
@@ -50,6 +50,7 @@
 
     <ul>
         <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ali-berkant-eker">linkedin.com/in/ali-berkant-eker</a></li>
+        <li><strong>GitHub:</strong> <a href="https://github.com/aliberkanteker">github.com/aliberkanteker</a></li>
         <li><strong>Email:</strong> <a href="mailto:aliberkanteker06@gmail.com">aliberkanteker06@gmail.com</a></li>
     </ul>
 
