--- a/index.html
+++ b/index.html
@@ -9,50 +9,60 @@
 <body>
 
 <div class="container">
-    <h1>Hello, I'm Ali Berkant Eker 👋</h1>
+    <header>
+        <h1>Hello, I'm Ali Berkant Eker 👋</h1>
+        <p class="intro-text">I am a master's student in Astronomy and Space Sciences, specializing in embedded systems, telemetry, and satellite technologies.</p>
+    </header>
 
-    <p>I am a master's student in Astronomy and Space Sciences at Erciyes University. I conduct research on embedded systems, telemetry, and satellite technologies, and I develop various projects in these fields.</p>
-
-    <p>I have been serving as the team captain of the KAYSat Model Satellite Team for over 3 years. During this period:</p>
-
-    <ul>
-        <li>I took on System Engineering.</li>
-        <li>I managed project planning and technical processes.</li>
-        <li>I handled team coordination and task distribution.</li>
-        <li>I was in charge of Landing Systems, Satellite modeling, Integration, and design processes.</li>
-    </ul>
-
-    <p>In my work, I specifically focus on satellite technologies, embedded system design, and telemetry infrastructures.</p>
+    <section class="team-section">
+        <h2>KAYSat Model Satellite Team</h2>
+        <p>
+            As a member of the KAYSat Model Satellite Team, established in September 2022, I am involved in the design and development processes in the field of model satellites. In my role as Team Captain, I support the team's overall coordination and project planning. As a team, we continue our work with an interdisciplinary approach, focusing on various projects like KAYSAT.
+        </p>
+    </section>
 
     <hr>
 
-    <h2>My Projects</h2>
+    <main>
+        <h2>My Projects</h2>
 
-    <ul>
-        <li><strong>NOCTUS-06:</strong> This is a "Ground-based functional CubeSat and ground station platform" project that I developed on my own. You can <a href="https://aliberkanteker.github.io/NOCTUS-06">visit the project page here.</a></li>
-        <li><strong>KAYSAT Model Satellite:</strong> This is a project where I served as the team leader and electrical subsystem designer in the TEKNOFEST 2023 Model Satellite Competition. For details, <a href="https://github.com/aliberkanteker/Atmospheric_sensor_codes">visit the Atmospheric_sensor_codes repository.</a></li>
-        <li><strong>TICOSAT:</strong> This is our ongoing project for the TEKNOFEST 2025 Model Satellite Competition. I am responsible for the design of the landing control, design & modeling, and communication subsystems.</li>
-    </ul>
+        <article class="project">
+            <h3>CANSAT (Educational Project)</h3>
+            <p>
+                Our first project as the KAYSat team was to develop a CANSAT, a model satellite the size of a soda can. Through this project, we gained valuable experience in collecting basic sensor data, transmitting it via telemetry, and processing this data. In this work, as Team Captain, I took part in coordinating the integration of electronic systems and the software development processes.
+            </p>
+            <div class="gallery">
+                <img src="images/itu1.jpg" alt="Cansat team working on the project">
+                <img src="images/itu2.jpg" alt="Cansat electronics development">
+                <img src="images/itu3.jpg" alt="Presenting the Cansat sensors">
+                <img src="images/itu4.jpg" alt="Cansat prototype chassis">
+            </div>
+        </article>
 
+        <article class="project">
+            <h3>KAYSAT (Teknofest Model Satellite Competition)</h3>
+            <p>
+                KAYSAT is a model satellite we developed for the TEKNOFEST 2023 Model Satellite Competition, designed to perform autonomous tasks according to the competition's requirements. In this project, alongside my responsibility as Team Captain, I also served as the Electrical Subsystem Designer. This process provided an opportunity to apply our theoretical knowledge in a competitive environment and to create a product as a team.
+            </p>
+            <div class="gallery">
+                <img src="images/Tasiyici1.jpg" alt="Kaysat carrier and payload system components">
+                <img src="images/Tasiyici2.jpg" alt="Assembled Kaysat carrier system">
+                <img src="images/Ekip1.jpeg" alt="Kaysat team at an event">
+                <img src="images/Ali1.png" alt="Presenting the Kaysat project">
+            </div>
+        </article>
+    </main>
+    
     <hr>
 
-    <h2>My Skills</h2>
-
-    <ul>
-        <li><strong>Software and Coding:</strong> Python, C++, Embedded Systems, Flask, Electron</li>
-        <li><strong>Hardware and Design:</strong> SolidWorks, Tinkercad, Electrical-Electronics, Robotic Coding</li>
-        <li><strong>Expertise:</strong> Systems Engineering, System Integration, Telemetry Infrastructures, Satellite Mechanical & Electronic Design</li>
-    </ul>
-
-    <hr>
-
-    <h2>Contact Me</h2>
-
-    <ul>
-        <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ali-berkant-eker">linkedin.com/in/ali-berkant-eker</a></li>
-        <li><strong>GitHub:</strong> <a href="https://github.com/aliberkanteker">github.com/aliberkanteker</a></li>
-        <li><strong>Email:</strong> <a href="mailto:aliberkanteker06@gmail.com">aliberkanteker06@gmail.com</a></li>
-    </ul>
+    <footer>
+        <h2>Contact Me</h2>
+        <ul class="contact-list">
+            <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ali-berkant-eker">linkedin.com/in/ali-berkant-eker</a></li>
+            <li><strong>GitHub:</strong> <a href="https://github.com/aliberkanteker">github.com/aliberkanteker</a></li>
+            <li><strong>Email:</strong> <a href="mailto:aliberkanteker06@gmail.com">aliberkanteker06@gmail.com</a></li>
+        </ul>
+    </footer>
 
 </div>
 
