--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
     <header>
         <h1>Hello, I'm Ali Berkant Eker 👋</h1>
-        <p class="intro-text">I am a master's student in Astronomy and Space Sciences, specializing in embedded systems, telemetry, and satellite technologies.</p>
+        <p class="intro-text">I am a master's student in Astronomy and Space Sciences at Erciyes University. I conduct research on embedded systems, telemetry, and satellite technologies, and I develop various projects in these fields.</p>
     </header>
 
     <section class="team-section">
