--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <div class="container">
     <header>
         <h1>Hello, I'm Ali Berkant Eker 👋</h1>
-        <p class="intro-text">I am a master's student in Astronomy and Space Sciences at Erciyes University. I conduct research on embedded systems, telemetry, and satellite technologies, and I develop various projects in these fields.</p>
+        <p class="intro-text"> As a master's student in Astronomy and Space Sciences at Erciyes University, I conduct research and develop various projects in the fields of embedded systems, telemetry, and satellite technologies. I also serve as the Team Captain of the KAYSat Model Satellite Team, working together with my teammates to bring our projects to life.</p>
     </header>
 
     <section class="team-section">
         <h2>KAYSat Model Satellite Team</h2>
         <p>
-            As a member of the KAYSat Model Satellite Team, established in September 2022, I am involved in the design and development processes in the field of model satellites. In my role as Team Captain, I support the team's overall coordination and project planning. As a team, we continue our work with an interdisciplinary approach, focusing on various projects like KAYSAT.
+            As one of the founding members of the KAYSat Model Satellite Team, established in September 2022 under the leadership of our advisor, I have been actively involved since the project's inception. Currently, as Team Captain, I support the team's coordination and project planning. Furthermore, I contributed to the creation process of the "CubeSats and Space Technologies" course opened by my advisor, and I now serve as a co-instructor for its practical technical training sessions. As a team, we continue our work with an interdisciplinary approach.
         </p>
     </section>
 
