--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 Our first project as the KAYSat team was to develop a CANSAT, a model satellite the size of a soda can. Through this project, we gained valuable experience in collecting basic sensor data, transmitting it via telemetry, and processing this data. In this work, as Team Captain, I took part in coordinating the integration of electronic systems and the software development processes.
             </p>
             <div class="gallery">
-                <img src="images/itu1.jpg" alt="Cansat team working on the project">
+                <img src="images/itu1.HEIC" alt="Cansat team working on the project">
                 <img src="images/itu2.jpg" alt="Cansat electronics development">
                 <img src="images/itu3.jpg" alt="Presenting the Cansat sensors">
                 <img src="images/itu4.jpg" alt="Cansat prototype chassis">
