--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                 <img src="images/Tasiyici2.jpg" alt="Assembled Kaysat carrier system">
                 <img src="images/Ekip1.jpeg" alt="Kaysat team at an event">
                 <img src="images/Ali1.png" alt="Presenting the Kaysat project">
+                <img src="images/sunum1.png" alt="KAYSAT Project Presentation 1">
+                <img src="images/sunum2.png" alt="KAYSAT Project Presentation 2">
             </div>
         </article>
     </main>
