--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
             </ul>
 
             <h4>Core Platform Capabilities</h4>
-            <ul class="features-list">
-                <li><strong>🛰️ CubeSat (NOCTUS-06):</strong> Within the 1U chassis, which I personally designed and 3D modeled using SolidWorks, it precisely measures critical data once per second.</li>
-                <li><strong>📡 Real-Time Data Stream:</strong> All telemetry data collected from the satellite is packaged in JSON format and transmitted instantly to the ground station via RF telemetry modules.</li>
-                <li><strong>🖥️ Desktop User Interface (GUI):</strong> The desktop GUI application, which I developed using Electron.js and Flask (Python), visualizes incoming live data in a modern interface.</li>
-                <li><strong>💾 Dual-Layer Data Storage:</strong> For reliability and data integrity, all telemetry data is saved both to the onboard SD card in CSV format and simultaneously stored in the cloud on Firebase.</li>
+            <ul class="core-capabilities">
+                <li><span class="icon">🛰️</span> <strong>CubeSat (NOCTUS-06):</strong> Within the 1U chassis, which I personally designed and 3D modeled using SolidWorks, it precisely measures critical data once per second.</li>
+                <li><span class="icon">📡</span> <strong>Real-Time Data Stream:</strong> All telemetry data collected from the satellite is packaged in JSON format and transmitted instantly to the ground station via RF telemetry modules.</li>
+                <li><span class="icon">🖥️</span> <strong>Desktop User Interface (GUI):</strong> The desktop GUI application, which I developed using Electron.js and Flask (Python), visualizes incoming live data in a modern interface.</li>
+                <li><span class="icon">💾</span> <strong>Dual-Layer Data Storage:</strong> For reliability and data integrity, all telemetry data is saved both to the onboard SD card in CSV format and simultaneously stored in the cloud on Firebase.</li>
             </ul>
 
             <h4>Project Gallery</h4>
