--- a/index.html
+++ b/index.html
@@ -120,6 +120,14 @@
             </div>
         </div>
 
+          <footer>
+        <h2>Contact Me</h2>
+        <ul class="contact-list">
+            <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ali-berkant-eker">linkedin.com/in/ali-berkant-eker</a></li>
+            <li><strong>GitHub:</strong> <a href="https://github.com/aliberkanteker">github.com/aliberkanteker</a></li>
+            <li><strong>Email:</strong> <a href="mailto:aliberkanteker06@gmail.com">aliberkanteker06@gmail.com</a></li>
+        </ul>
+    </footer>
 
         <h2>Conclusion and Learnings</h2>
         <p>
