--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             
            <body>
   
-        <h1>NOCTUS-06 Functional CubeSat and Ground Station Platform</h1>
+        <h3>CANSAT (Educational Project)</h3>
         <p><em>Developed by: Ali Berkant Eker</em></p>
         
         <h2>Project Purpose</h2>
