--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>My Projects</h2>
 
         <article class="project">
-            <h3>CANSAT (Educational Project)</h3>
+            <h2>CANSAT (Educational Project)</h2>
             <p>
                 Our first project as the KAYSat team was to develop a CANSAT, a model satellite the size of a soda can. Through this project, we gained valuable experience in collecting basic sensor data, transmitting it via telemetry, and processing this data. In this work, as Team Captain, I took part in coordinating the integration of electronic systems and the software development processes.
             </p>
@@ -56,15 +56,15 @@
             
            <body>
   
-        <h3>CANSAT (Educational Project)</h3>
+        <h2>NOCTUS-06 Functional CubeSat and Ground Station Platform</h2>
         <p><em>Developed by: Ali Berkant Eker</em></p>
         
-        <h2>Project Purpose</h2>
+        <h3>Project Purpose</h3>
         <p>
             NOCTUS-06 is a ground-based CubeSat prototype, designed in a 1U format, that collects atmospheric data (temperature, pressure, humidity, CO2, methane, etc.) and transmits this data instantly to a ground station via RF telemetry. This project was undertaken to demonstrate the capabilities for developing low-cost satellite systems and data acquisition platforms.
         </p>
 
-        <h2>Technical Specifications</h2>
+        <h3>Technical Specifications</h3>
         <ul>
             <li><strong>Sensors:</strong> BME280 (Temperature, Pressure, Humidity), MH-Z19 (CO2), MQ-4 (Methane), MQ-9 (Propane), MPU6050 (3-Axis Gyro & Accelerometer)</li>
             <li><strong>Positioning:</strong> GY-NEO6MV2 GPS Module</li>
@@ -73,7 +73,7 @@
             <li><strong>Power:</strong> 2x 18650 Li-ion Battery (7.4V), 5V DC-DC Converter</li>
         </ul>
 
-        <h2>Core Platform Capabilities</h2>
+        <h3>Core Platform Capabilities</h3>
         <ul class="capabilities-list">
             <li>
                 <strong>🛰️ CubeSat (NOCTUS-06):</strong> Within the 1U chassis, which I personally designed and 3D modeled using SolidWorks, it precisely measures critical data once per second, such as temperature, humidity, pressure, carbon dioxide (CO2), various gases (methane & propane), 3-axis acceleration & gyroscope, GPS position, and system current.
@@ -89,7 +89,7 @@
             </li>
         </ul>
 
-        <h2>Project Gallery</h2>
+        <h3>Project Gallery</h3>
   <div class="gallery">
             <div class="gallery-item">
                 <img src="images/Ncts1.jpg" alt="NOCTUS-06 Uydusu 5">
@@ -117,12 +117,12 @@
             </div>
         </div>
 
-        <h2>Conclusion and Learnings</h2>
+        <h3>Conclusion and Learnings</h3>
         <p>
             This project has provided practical experience in embedded systems programming, sensor integration, power management, and wireless communication. The successful real-time transfer of data in JSON format to a Flask and Electron-based interface demonstrates a complete system integration.
         </p>
 <footer>
-        <h2>Contact Me</h2>
+        <h3>Contact Me</h3>
         <ul class="contact-list">
             <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ali-berkant-eker">linkedin.com/in/ali-berkant-eker</a></li>
             <li><strong>GitHub:</strong> <a href="https://github.com/aliberkanteker">github.com/aliberkanteker</a></li>
