--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
                 <div class="image-caption">Map View</div>
             </div>
             <div class="gallery-item">
-                <img src="images/Ncts4.jpg" alt="NOCTUS-06 Uydusu 4">
+                <img src="images/Ncts4.jpeg" alt="NOCTUS-06 Uydusu 4">
                 <div class="image-caption">Data Visualization on Graph </div>
             </div>
             <div class="gallery-item">
-                <img src="images/Ncts5.jpg" alt="NOCTUS-06 Uydusu 1">
+                <img src="images/Ncts5.jpeg" alt="NOCTUS-06 Uydusu 1">
                 <div class="image-caption">Noctus-06 and Ground Station Telemetry (RF900)</div>
             </div>
             <div class="gallery-item">
