--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
             </div>
             <div class="gallery-item">
                 <img src="images/Ncts4.jpeg" alt="NOCTUS-06 Uydusu 4">
-                <div class="image-caption">Data Visualization on Graph </div>
+                <div class="image-caption">Hardware Development and Prototyping Process </div>
             </div>
             <div class="gallery-item">
                 <img src="images/Ncts5.jpeg" alt="NOCTUS-06 Uydusu 1">
-                <div class="image-caption">Noctus-06 and Ground Station Telemetry (RF900)</div>
+                <div class="image-caption">Circuit Soldering and Wiring Detail</div>
             </div>
             <div class="gallery-item">
                 <img src="images/firebase_data.png" alt="Firebase Veri Depolama">
