--- a/index.html
+++ b/index.html
@@ -29,28 +29,28 @@
         <article class="project">
             <h3>CANSAT (Educational Project)</h3>
             <p>
-                Our first project as the KAYSat team was to develop a CANSAT...
+                Our first project as the KAYSat team was to develop a CANSAT, a model satellite the size of a soda can. Through this project, we gained valuable experience in collecting basic sensor data, transmitting it via telemetry, and processing this data. In this work, as Team Captain, I took part in coordinating the integration of electronic systems and the software development processes.
             </p>
             <div class="gallery">
-                <div class="gallery-item"><img src="images/itu1.png" alt="Cansat team"><div class="image-caption">Team Work</div></div>
-                <div class="gallery-item"><img src="images/itu2.jpg" alt="Cansat electronics"><div class="image-caption">Electronics Development</div></div>
-                <div class="gallery-item"><img src="images/itu3.jpg" alt="Cansat presentation"><div class="image-caption">Sensor Presentation</div></div>
-                <div class="gallery-item"><img src="images/itu4.jpg" alt="Cansat prototype"><div class="image-caption">Cansat Prototype</div></div>
+                <div class="gallery-item"><img src="images/itu1.png" alt="Cansat team working on the project"><div class="image-caption">Team Work</div></div>
+                <div class="gallery-item"><img src="images/itu2.jpg" alt="Cansat electronics development"><div class="image-caption">Electronics Development</div></div>
+                <div class="gallery-item"><img src="images/itu3.jpg" alt="Presenting the Cansat sensors"><div class="image-caption">Sensor Presentation</div></div>
+                <div class="gallery-item"><img src="images/itu4.jpg" alt="Cansat prototype chassis"><div class="image-caption">Cansat Prototype</div></div>
             </div>
         </article>
 
         <article class="project">
             <h3>KAYSAT (Teknofest Model Satellite Competition)</h3>
             <p>
-                KAYSAT is a model satellite we developed for the TEKNOFEST 2023...
+                KAYSAT is a model satellite we developed for the TEKNOFEST 2023 Model Satellite Competition, designed to perform autonomous tasks according to the competition's requirements. In this project, alongside my responsibility as Team Captain, I also served as the Electrical Subsystem Designer. This process provided an opportunity to apply our theoretical knowledge in a competitive environment and to create a product as a team.
             </p>
             <div class="gallery">
-                 <div class="gallery-item"><img src="images/Tasiyici1.jpg" alt="Kaysat components"><div class="image-caption">Payload & Carrier Systems</div></div>
-                <div class="gallery-item"><img src="images/Tasiyici2.jpg" alt="Assembled Kaysat"><div class="image-caption">Assembled Carrier</div></div>
-                <div class="gallery-item"><img src="images/Ekip1.jpeg" alt="Kaysat team"><div class="image-caption">KAYSat Team</div></div>
-                <div class="gallery-item"><img src="images/Ali1.png" alt="Kaysat presentation"><div class="image-caption">Project Presentation</div></div>
-                <div class="gallery-item"><img src="images/sunum1.png" alt="KAYSAT Presentation 1"><div class="image-caption">Presentation Detail 1</div></div>
-                <div class="gallery-item"><img src="images/sunum2.png" alt="KAYSAT Presentation 2"><div class="image-caption">Presentation Detail 2</div></div>
+                <div class="gallery-item"><img src="images/Tasiyici1.jpg" alt="Kaysat carrier and payload system components"><div class="image-caption">Payload & Carrier Systems</div></div>
+                <div class="gallery-item"><img src="images/Tasiyici2.jpg" alt="Assembled Kaysat carrier system"><div class="image-caption">Assembled Carrier</div></div>
+                <div class="gallery-item"><img src="images/Ekip1.jpeg" alt="Kaysat team at an event"><div class="image-caption">KAYSat Team</div></div>
+                <div class="gallery-item"><img src="images/Ali1.png" alt="Presenting the Kaysat project"><div class="image-caption">Project Presentation</div></div>
+                <div class="gallery-item"><img src="images/sunum1.png" alt="KAYSAT Project Presentation 1"><div class="image-caption">Presentation Detail 1</div></div>
+                <div class="gallery-item"><img src="images/sunum2.png" alt="KAYSAT Project Presentation 2"><div class="image-caption">Presentation Detail 2</div></div>
             </div>
         </article>
 
@@ -60,18 +60,33 @@
             
             <h4>Project Purpose</h4>
             <p>
-                NOCTUS-06 is a ground-based CubeSat prototype...
+                NOCTUS-06 is a ground-based CubeSat prototype, designed in a 1U format, that collects atmospheric data (temperature, pressure, humidity, CO2, methane, etc.) and transmits this data instantly to a ground station via RF telemetry. This project was undertaken to demonstrate the capabilities for developing low-cost satellite systems and data acquisition platforms.
             </p>
 
             <h4>Technical Specifications</h4>
             <ul>
-                <li><strong>Sensors:</strong> BME280...</li>
-                </ul>
+                <li><strong>Sensors:</strong> BME280 (Temperature, Pressure, Humidity), MH-Z19 (CO2), MQ-4 (Methane), MQ-9 (Propane), MPU6050 (3-Axis Gyro & Accelerometer)</li>
+                <li><strong>Positioning:</strong> GY-NEO6MV2 GPS Module</li>
+                <li><strong>Processor:</strong> Arduino Mega 2560 Pro Mini</li>
+                <li><strong>Communication:</strong> RF900 Ultra Long Range Radio Modem (Telemetry)</li>
+                <li><strong>Power:</strong> 2x 18650 Li-ion Battery (7.4V), 5V DC-DC Converter</li>
+            </ul>
 
             <h4>Core Platform Capabilities</h4>
             <ul class="capabilities-list">
-                <li><strong>🛰️ CubeSat (NOCTUS-06):</strong> Within the 1U chassis...</li>
-                </ul>
+                <li>
+                    <strong>🛰️ CubeSat (NOCTUS-06):</strong> Within the 1U chassis, which I personally designed and 3D modeled using SolidWorks, it precisely measures critical data once per second, such as temperature, humidity, pressure, carbon dioxide (CO2), various gases (methane & propane), 3-axis acceleration & gyroscope, GPS position, and system current.
+                </li>
+                <li>
+                    <strong>📡 Real-Time Data Stream:</strong> All telemetry data collected from the satellite is packaged in JSON format and transmitted instantly to the ground station via RF telemetry modules.
+                </li>
+                <li>
+                    <strong>🖥️ Desktop User Interface (GUI):</strong> The desktop GUI application, which I developed using Electron.js and Flask (Python), visualizes incoming live data in a modern and user-friendly interface, displays the satellite's position on a map, and presents sensor data with real-time graphs.
+                </li>
+                <li>
+                    <strong>💾 Dual-Layer Data Storage:</strong> For reliability and data integrity, I established a dual-layer storage architecture. All telemetry data is saved both to the onboard SD card in CSV format and simultaneously stored in the cloud on Firebase.
+                </li>
+            </ul>
 
             <h4>Project Gallery</h4>
             <div class="gallery">
@@ -85,7 +100,7 @@
 
             <h4>Conclusion and Learnings</h4>
             <p>
-                This project has provided practical experience...
+                This project has provided practical experience in embedded systems programming, sensor integration, power management, and wireless communication. The successful real-time transfer of data in JSON format to a Flask and Electron-based interface demonstrates a complete system integration.
             </p>
         </article>
     </main>
