--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
             <div class="gallery">
                 <div class="gallery-item"><img src="images/itu1.png" alt="Cansat team working on the project"><div class="image-caption">Team Work</div></div>
                 <div class="gallery-item"><img src="images/itu2.jpg" alt="Cansat electronics development"><div class="image-caption">Electronics Development</div></div>
-                <div class="gallery-item"><img src="images/itu3.jpg" alt="Presenting the Cansat sensors"><div class="image-caption">Sensor Presentation</div></div>
+                <div class="gallery-item"><img src="images/itu3.jpg" alt="Presenting the Cansat sensors"><div class="image-caption">Project Presentation</div></div>
                 <div class="gallery-item"><img src="images/itu4.jpg" alt="Cansat prototype chassis"><div class="image-caption">Cansat Prototype</div></div>
             </div>
         </article>
 
         <article class="project">
-            <h3>KAYSAT (Teknofest Model Satellite Competition)</h3>
+            <h3>KAYSAT KAYSAT Model Satellite and Carrier System (Teknofest Model Satellite Competition)</h3>
             <p>
                 KAYSAT is a model satellite we developed for the TEKNOFEST 2023 Model Satellite Competition, designed to perform autonomous tasks according to the competition's requirements. In this project, alongside my responsibility as Team Captain, I also served as the Electrical Subsystem Designer. This process provided an opportunity to apply our theoretical knowledge in a competitive environment and to create a product as a team.
             </p>
@@ -93,7 +93,7 @@
                 <div class="gallery-item"><img src="images/Ncts1.jpg" alt="NOCTUS-06 Satellite"><div class="image-caption">Prototype Structure</div></div>
                 <div class="gallery-item"><img src="images/Ncts2.jpg" alt="Ground Station"><div class="image-caption">Ground Station View</div></div>
                 <div class="gallery-item"><img src="images/Ncts3.jpg" alt="Map View"><div class="image-caption">Map View</div></div>
-                <div class="gallery-item"><img src="images/Ncts4.jpeg" alt="Development Process"><div class="image-caption">Hardware Development</div></div>
+                <div class="gallery-item"><img src="images/Ncts4.jpeg" alt="Development Process"><div class="image-caption">The Process of Hardware Development</div></div>
                 <div class="gallery-item"><img src="images/Ncts5.jpeg" alt="Circuit Detail"><div class="image-caption">Circuit Detail</div></div>
                 <div class="gallery-item"><img src="images/firebase_data.png" alt="Firebase Storage"><div class="image-caption">Firebase Data Storage</div></div>
             </div>
